# PR_genesys

./: .gitignore  Cargo.toml
backend/: Cargo.toml
backend/src/: lib.rs  main.rs  smthng.rs  utils.rs
backend/src/database/: db.rs  mod.rs  working_with_kegg.rs  working_with_projects.rs
backend/src/parsing/: mod.rs  parsers.rs  schemas.rs
backend/tests/: integration_test.rs  kegg_adding.rs
frontend/: Cargo.toml
frontend/src/: lib.rs  main.rs
frontend/src/routes/: hello_world.rs  mirror_json.rs  mod.rs
