[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
scraper = "*"
reqwest = {version = "0.12", features = ["json"]}
tokio ={version = "1", features = ["full"]}
tokio-macros = { version = "2.4.0" }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
regex = "1.11.1"
json = "0.12.4"
