[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
scraper = "*"
reqwest = {version = "0.12", features = ["json"]}
tokio ={version = "1", features = ["full"]}
tokio-macros = { version = "2.4.0" }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
regex = "1.11.1"
json = "0.12.4"
mongodb = {version = "3.1.0", features = ["sync"]}
bson = "2.13.0"
log = "0.4.22"
simplelog = "^0.12.0"